<resources>
    <string name="app_name">娱乐宝</string>
    <string name="tab_one">小说</string>
    <string name="tab_contact">待定1</string>
    <string name="tab_found">待定2</string>
    <string name="tab_me">待定3</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="seatch_history">搜索历史</string>
    <string name="seatch_clear">清空</string>
    <string name="seatch_hint">请输入书名或作者名</string>
    <string name="split">|</string>
</resources>
