<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_search_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/zhonghailanse"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_search_back"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:onClick="iv_click"
            android:scaleType="centerInside"
            android:src="@mipmap/search_back_top_bar" />

        <TextView
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:background="@color/huise" />

        <com.android.lucy.treasure.view.SearchEditTextView
            android:id="@+id/et_seatch_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/seatch_hint"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:background="@color/huise" />

        <ImageView
            android:id="@+id/iv_serach"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:onClick="iv_click"
            android:scaleType="centerInside"
            android:src="@mipmap/search_top_bar" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_search_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/rl_search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/seatch_history"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_history_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:drawableLeft="@mipmap/abc_ic_clear_sreach_history"
                android:text="@string/seatch_clear"
                android:textSize="12sp"
                android:onClick="iv_click"/>

            <ListView
                android:id="@+id/lv_search_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_history_clear"
                android:layout_marginTop="10dp" />
        </RelativeLayout>


        <ListView
            android:id="@+id/lv_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>


</LinearLayout>